--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,28 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.wrapper {
+    display: flex;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.category_line_wrapper {
+    display: inline-flex;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.category_line {
+    display: flex;
+    flex-wrap: wrap; 
+    gap: 19px;
+    justify-content: space-between;
+    align-items: stretch; 
   }
-  to {
-    transform: rotate(360deg);
-  }
+  
+.set_header_line {
+    margin-top: 25px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 9px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.category-items{
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
 }
