--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,6 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
   
   box-sizing: border-box;
 
@@ -30,16 +29,17 @@ h1 {
 }
 
 body {
-  max-width: 1200px;
+  max-width: 1400px;
+  width: 90%;
   margin: 0 auto;
-  margin-top: 30px;
+  margin-top: 24px;
+  overflow-x: hidden;
 }
 
 button {
   border-radius: 8px;
   border: 1px solid transparent;
   font-size: 1em;
-  font-weight: 500;
   font-family: inherit;
   cursor: pointer;
   transition: border-color 0.25s;
@@ -47,7 +47,27 @@ button {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: black;
     background-color: #ffffff;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+      background-color: white !important; 
+      color: black !important;
+  }
+
+  input {
+    background-color: transparent; 
+    color: #000;
+  }
+  
+  input::placeholder {
+    color: #aaa;
+  }
+
+  input[type="checkbox"] {
+    background-color: transparent;
   }
 }
