--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -27,6 +27,7 @@ h3 {
 
 .buttons_group {
     background-color: #FAFAFA;
+    position: relative;
     border-radius: 10px;
     display: flex;
     justify-content: space-around;
@@ -40,20 +41,22 @@ h3 {
     font-size: 16px;
     font-weight: bold;
     cursor: pointer;
+    user-select: none;
+    position: relative;
+    z-index: 3;
     background-color: transparent;
     color: #272727;
     transition: all 0.3s ease;
 }
 
 .button.active {
-    background-color: #8b0000;
     color: #ffffff;
 }
 
 .contact_button {
-    background-color: #8b0000;
     padding: 8px 111px;
     color: #ffffff;
+    background-color: #8b0000;
     width: 100%;
 }
   
@@ -62,4 +65,20 @@ h3 {
     font-size: 18px;
     color: #272727;
     margin-bottom: 16px;
+}
+
+.switch_marker {
+    background-color: #8b0000;
+    position: absolute;
+    z-index: 2;
+    width: 50%;
+    height: 100%;
+    border-radius: 10px;
+    transition: left .3s;
+}
+
+@media (max-width:1024px) {
+    .buttons_container {
+        display: none;
+    }
 }
