--- a/src/styles/Categories.css
+++ b/src/styles/Categories.css
@@ -6,16 +6,10 @@
   display: flex;
   flex-direction: column;
   user-select: none;
-  cursor: pointer;
-}
-
-.category-card:hover {
-  transform: scale(1.05);
 }
 
 .category-title {
   width: 100%;
-  max-width: 100px;
   font-size: 16px;
   font-weight: 700;
   word-wrap: break-word;
@@ -34,6 +28,8 @@
 
 .category-count span {
   background-color: #FFF1D7;
+  font-weight: bold;
+  font-size: 14px;
   border-radius: 10px;
   padding: 0px 10px;
 }
