--- a/src/styles/CategoryList.css
+++ b/src/styles/CategoryList.css
@@ -1,12 +1,3 @@
-.product_item {
-    background-color: #FFFCF7;
-    border-radius: 15px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    width: 100%;
-    max-width: 285px;
-    transition: transform 0.3s ease;
-}
-
 .product_item_title {
     font-size: 16px;
     font-weight: 500;
@@ -32,10 +23,66 @@
     justify-content: space-between;
 }
 
-.product_item img {
-    width: 100%;
-}
-
 .product_item:hover {
     transform: scale(1.05);
+}
+
+.product_category_block {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 285px); 
+    gap: 18px;
+}
+
+.product_item {
+    background-color: #FFFCF7;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    width: 100%;
+    transition: transform 0.3s ease;
+    display: flex;
+    flex-direction: column;
+}
+
+.product_item img {
+    width: 100%;
+    height: 100%;
+    max-height: 191px;
+    border-radius: 12px;
+}
+
+@media(max-width:1536px) {
+    .product_category_block  {
+        grid-template-columns: repeat(auto-fit, 278px); 
+    }
+}
+
+@media(max-width:1280px) {
+    .product_category_block  {
+        grid-template-columns: repeat(auto-fit, 274px); 
+    }
+}
+
+@media(max-width:1024px) {
+    .product_category_block  {
+        grid-template-columns: repeat(auto-fit, 270px); 
+    }
+}
+
+@media(max-width:768px) {
+    .product_category_block  {
+        grid-template-columns: repeat(auto-fit, 163px); 
+    }
+}
+
+
+@media(max-width:475px) {
+    .product_category_block  {
+        grid-template-columns: repeat(auto-fit, 163px); 
+    }
+}
+
+@media (max-width:375px) {
+    .product_category_block  {
+        grid-template-columns: repeat(auto-fit, 145px); 
+    }
 }
