--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -74,3 +74,9 @@
     color: #0029FF;
     text-decoration: underline;
 }
+
+@media (max-width:768px) {
+    .footer_wrapper {
+        display: none;
+    }
+}
