--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+:root::-webkit-scrollbar {
+  width: 5px;
+}
+
+:root::-webkit-scrollbar-thumb {
+  background-color: #8B0506;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -29,11 +37,12 @@ h1 {
 }
 
 body {
-  max-width: 1400px;
+  max-width: 1350px;
   width: 90%;
   margin: 0 auto;
   margin-top: 24px;
   overflow-x: hidden;
+  font-family: "Inter", serif;
 }
 
 button {
