--- a/src/styles/Cart.css
+++ b/src/styles/Cart.css
@@ -2,16 +2,27 @@
     background-color: #FFF1D7;
     width: 100%;
     height: 100%;
-    max-width: 328px;
+    max-width: 415px;
     top: 0;
     position: fixed;
     right:0;
     z-index: 4;
     border-radius: 10px 0px 0px 10px;
-    padding: 40px 25px 0px 25px;
-    transform: translateX(378px);
+    transform: translateX(415px);
     overflow-y: scroll;
     overflow-x: hidden;
+}
+
+.cart_wrapper::-webkit-scrollbar {
+    width: 5px;
+}
+
+.cart_wrapper::-webkit-scrollbar-thumb {
+    background-color:#F6F6F6;
+}
+
+.cart_inner {
+    padding: 40px 25px;
 }
 
 .cart_wrapper.visible {
@@ -37,7 +48,6 @@
     align-items: baseline;
     justify-content: space-between;
 }
-
 
 .cart_top_right {
     display: flex;
@@ -176,14 +186,18 @@ input[type="number"] {
     background-color: #fff;
     border-radius: 18px;
     padding: 10px 10px 16px 25px;
-    display: flex;
-    align-items: center;
-    gap: 26px;
 }
 
 .more_devices_desc {
     display: flex;
-    gap: 50px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+.more_devices_left {
+    display: flex;
+    gap: 26px;
     align-items: center;
 }
 
@@ -291,19 +305,39 @@ input[type="number"] {
 }
 
 .empty_cart {
+    display: flex;
     font-size: 14px;
     font-weight: 600;
     color: #6D6D6D;
+    justify-content: center;
+}
+
+.loadingCart {
+    display: flex;
+    justify-content: center;
 }
 
 .cart_item_weight {
     font-size: 14px;
     color: #6D6D6D;
-
 }
 
 .loading {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+@media (max-width:768px) {
+    .cart_bg_black {
+        width: 100vw;
+        height: 100vh;
+        position: fixed;
+        z-index: 2;
+        overflow-y: hidden;
+        top: 0;
+        left: 0;
+        background: rgba(0, 0, 0, .32);
+        transition: background .3s;
+    }
 }
