--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -77,6 +77,7 @@
 @media (max-width: 768px) {
     .header__nav,
     .header__cart-button,
+    .header__actions,
     .header__login-button {
         display: none;
     }
@@ -84,5 +85,9 @@
     .header__content {
         display: flex;
         justify-content: space-between;
+    }
+
+    .header__logo {
+        margin: 0 auto;
     }
 }
