--- a/src/styles/MenuMobile.css
+++ b/src/styles/MenuMobile.css
@@ -8,7 +8,7 @@
     display: none;
     top: 0;
     left: 0;
-    position: absolute;
+    position: fixed;
     z-index: 99;
     border-radius: 0px 30px 0px 0px;
     width: 70%;
@@ -47,7 +47,7 @@
 }
 
 .menu-class-background {
-    position: absolute;
+    position: fixed;
     z-index:5;
     top: 0;
     left: 0;
@@ -139,6 +139,23 @@
 .contact_us {
     display: flex;
     gap: 8px;
+}
+
+.section_menu_middle {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.section_menu_middle span {
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.menu_middle_line {
+    height: 1px;
+    background-color: #BABABA;
+    margin: 12px 0px;
 }
 
 @media (max-width: 768px) {
