--- a/src/styles/ProfileModal.css
+++ b/src/styles/ProfileModal.css
@@ -31,7 +31,7 @@
     width: 100vw;
     height: 100vh;
     max-width: 320px;
-    max-height: 500px;
+    max-height: 535px;
     border-radius: 20px;
 }
 
@@ -91,8 +91,56 @@
 }
 
 .profile_modal_userProfile_body {
-    margin-top: 44px;
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
     gap: 20px;
+}
+
+.input_form_field {
+    background-color: #F2F2F2;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    padding: 5px 15px 12px 15px;
+    margin-bottom: 12px;
+}
+
+.profile_input {
+    background-color: transparent !important;
+    border: none;
+    font-size: 21px;
+    font-weight: 500;
+}
+
+.profile_input:focus {
+    outline: none;
+}
+
+.input_hintText {
+    font-size: 16px;
+    color: #6D6D6D;
+}
+
+.profile_save_form_submit {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding: 8px 0;
+    background-color: #8B0506;
+    font-size: 19px;
+    font-weight: bold;
+    color: #fff;
+}
+
+.profile_delete_form_submit {
+    margin-top: 15px;
+    font-size: 19px;
+    padding: 8px 0;
+    color: #272727;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    background-color: transparent;
+    border: 1px solid #6D6D6D;
 }
