--- a/src/styles/ProfileModal.css
+++ b/src/styles/ProfileModal.css
@@ -26,13 +26,20 @@
 }
 
 .profile_modal_userProfile {
+    display: flex;
+    flex-direction: column;
+    max-height: 535px;
     background-color: #fff;
     padding: 36px 30px 40px 30px;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
     max-width: 320px;
     max-height: 535px;
     border-radius: 20px;
+    overflow: auto;
+}
+
+.profile_modal_userProfile::-webkit-scrollbar {
+    display: none;
 }
 
 .ttl_profile_modal {
@@ -97,6 +104,10 @@
     gap: 20px;
 }
 
+.profile_modal_userProfile_body::-webkit-scrollbar {
+    display: none;
+}
+
 .input_form_field {
     background-color: #F2F2F2;
     border-radius: 20px;
@@ -143,4 +154,32 @@
     width: 100%;
     background-color: transparent;
     border: 1px solid #6D6D6D;
+}
+
+.empty_cardHistory {
+    display: flex;
+    justify-content: center;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.error_message_profile {
+    color: red;
+    font-size: 15px;
+}
+
+@media (max-width: 768px) {
+    .profile_modal {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .profile_modal_wrapper {
+        position:static;
+    }
+
+    .profile_back_btn {
+        display: none;
+    }
 }
