--- a/src/styles/CodeModal.css
+++ b/src/styles/CodeModal.css
@@ -26,4 +26,10 @@
     text-align: center;
     font-weight: bold;
     font-size: 30px;
-} 
+}
+
+.send_again {
+    cursor: pointer;
+    font-size: 0.67em;
+    font-weight: bold;
+}
