--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -26,15 +26,16 @@
 .slide img {
     width: 100%;
     height: 100%;
-    min-height: 180px;
+    object-position: center; 
     object-fit: cover;
     display: block;
+    height: 400px;
 }
-
 
 .slide {
     min-width: 100%;
     transition: opacity 0.5s ease;
+    overflow: hidden; 
 }
 
 .slides_wrapper {
